name:                cassava-th
version:             0.1.0.0
synopsis:            template haskell to generate data from a sample csv file
license:             BSD3
license-file:        LICENSE
author:              Adam Vogt <vogt.adam@gmail.com>
maintainer:          vogt.adam@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.8.2,
                     GHC == 7.6.2,
                     GHC == 7.4.1,
                     GHC == 7.2.1
-- blaze fails with ghc == 7.0

library
  exposed-modules:     Data.Csv.TH
  other-extensions:    RecordWildCards, TemplateHaskell, NoMonomorphismRestriction
  build-depends:       base >=4.3 && <5,
                       aeson < 0.8,
                       attoparsec >=0.11 && <0.12,
                       bytestring >=0.9 && <0.11,
                       containers >=0.4 && <0.6,
                       cassava < 0.5,
                       data-default >=0.5 && <0.6,
                       filepath >=1.3 && <1.4,
                       mtl >=2.1 && <2.2,
                       syb >=0.4 && <0.5,
                       template-haskell >=2.5 && <3,
                       vector >=0.10 && <0.11
  default-language:    Haskell2010
